--- a/.vim/autoload/vst/default.css
+++ b/.vim/autoload/vst/default.css
@@ -1,4 +1,4 @@
-body { background-color: #fff; margin: 0px 10%; min-width: 720px; font-family: Verdana, sans-serif;
+body { color: #000; background-color: #fff; margin: 0px 10%; min-width: 720px; font-family: Verdana, sans-serif;
        counter-reset: chapter section subsection subsubsection paragraph lchapter lsection lsubsection lsubsubsection lparagraph}
 div.footnote { border-left: 1px solid #000; margin-left: 0em; clear: both }
 div.ftext { position: relative; margin-left: 50px }
@@ -12,26 +12,26 @@ div.warning, div.caution, div.danger, div.error { border: 2px solid #f00; margin
 div.note, div.hint, div.important { border: 2px solid #000; margin: 0.5em 2em 1em 2em; padding: 0em 1em }
 div.figure { display: block; padding: 1em; width: 400px; clear: both}
 div.topic { margin: 2em }
-div.vstsidebar, div.sidebar { border: 2px solid #aaa; background-color: #ffffee; float: right; width: 40%; margin-left: 1em; margin-right: -1em; padding: 1em }
+div.vstsidebar, div.sidebar { border: 2px solid #aaa; color: #000; background-color: #ffffee; float: right; width: 40%; margin-left: 1em; margin-right: -1em; padding: 1em }
 span.strike { text-decoration: line-through }
 span.big { font-size: large }
 span.small { font-size: small }
 span.title { font-style: italic }
-span.toc { font-size: large; font-weight: 900 }
 span.notetitle { font-size: large; font-weight: 900; font-family: Verdana, sans-serif }
+p.toc { font-size: large; font-weight: 900 }
 p.notesubtitle { font-weight: 900; font-family: Verdana, sans-serif }
 p.attribution { font-style: italic; margin-left: 8em; text-indent: -1.4em }
 .vstright { float: right; margin: 1em }
 .vstleft { float: left; margin: 1em }
-.vstcenter { margin: 1em; margin-left: auto; margin-right: auto }
+.vstcenter { margin: 1em auto }
 blockquote.pull { font-size: large }
 p.rubric { font-size: large; margin-left: 2em }
 dd.normal { margin-bottom: 0.5em }
 dt.option { float: left; margin: 0em 0em 5px 2em; padding: 0px; font-family: monospace }
-dd.option { margin: 0px; padding: 0px; margin: 0em 0em 5px 10em; text-indent: 0.5em }
+dd.option { padding: 0px; margin: 0em 0em 5px 10em; text-indent: 0.5em }
 dd.option > p { margin: 0px }
 dd.normal > p { margin: 0px }
-table { border-collapse: collapse; margin: 0.5em; margin-left: 0em; margin-right: 0em }
+table { border-collapse: collapse; margin: 0.5em 0em }
 thead, tfoot { text-align: center; font-weight: bold }
 td { border: 1px solid #000; padding: 0.25em; _top: 0%; vertical-align: top }
 td blockquote p{ margin: 0px; padding: 0px}
@@ -53,12 +53,12 @@ h2 { counter-reset: section subsection subsubsection paragraph }
 h3 { counter-reset: subsection subsubsection paragraph }
 h4 { counter-reset: subsubsection paragraph }
 h5 { counter-reset: paragraph }
-h1 a { color: black }
-h2 a { color: black }
-h3 a { color: black }
-h4 a { color: black }
-h5 a { color: black }
-h6 a { color: black }
+h1 a { color: #000; background-color: transparent }
+h2 a { color: #000; background-color: transparent }
+h3 a { color: #000; background-color: transparent }
+h4 a { color: #000; background-color: transparent }
+h5 a { color: #000; background-color: transparent }
+h6 a { color: #000; background-color: transparent }
 p.subh1 { text-align: center; font-size: 120%; font-variant: small-caps }
 p.subh2, p.subh3, p.subh4, p.subh5, p.subh6 { text-align: left; font-size: 120%; font-variant: small-caps }
 h2:before { content: counter(chapter)" "; counter-increment: chapter }
@@ -87,13 +87,13 @@ ul.square { list-style-type: square }
 ul.circle { list-style-type: circle }
 ul.disc { list-style-type: disc }
 li > p { margin: 0em }
-img { border: 1px solid #000; padding: 0em; display: block; margin: 1em; margin-left: auto; margin-right: auto }
+img { border: 1px solid #000; padding: 0em; display: block; margin: 1em auto }
 img.inline { border: 1px solid #000; padding: 0em; margin: 0em; display: inline }
-pre { background-color: #eee; margin-left: 2em; clear: both; overflow: auto }
-div.unknown { font-family: monospace; background-color: #fff; margin: 1em; padding: 1em; clear: both; border: 3px solid red}
-pre.quoted { background-color: #eee; margin-left: 0em; clear: both; overflow: auto  }
-pre.rawlatex { background-color: #ddd; border: 1px solid #000; padding: 0.1em; clear: both; overflow: auto  }
-pre.address { font-family: Verdana, sans-serif; display: inline; margin: 0px; background-color: #fff; overflow: auto }
+pre { color: #000; background-color: #eee; margin-left: 2em; clear: both; overflow: auto }
+div.unknown { font-family: monospace; color: #000; background-color: #fff; margin: 1em; padding: 1em; clear: both; border: 3px solid red}
+pre.quoted { color: #000; background-color: #eee; margin-left: 0em; clear: both; overflow: auto  }
+pre.rawlatex { color: #000; background-color: #ddd; border: 1px solid #000; padding: 0.1em; clear: both; overflow: auto  }
+pre.address { font-family: Verdana, sans-serif; display: inline; margin: 0px; color: #000; background-color: #fff; overflow: auto }
 span.target { text-decoration: underline }
-div.vstfooter hr { width: 100%; margin: 0px; margin-top: 0em }
+div.vstfooter hr { width: 100%; margin: 0px }
 div.vstfooter p { margin: 0px }
